prevent employers images to be visible in small mode

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@
     width: 0px !important;
 }
 
+.vcard > img {
+        width: 0px;
+        height: 0px;
+}
+
 .include {
     display: none;
 }
